--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
 	<title>Document</title>
 </head>
 <body>
-	<div id="wrapper" style="position:relative;height:800px;width:800px">
+	<div id="wrapper" style="position:relative;height:300px;width:500px">
 		<div id="app" style="position:absolute;top:0;bottom:0;left:0;right:0;">
-			<sheet-container :sheet-width="sheetWidth" :sheet-height="sheetHeight"></sheet-container>
+			<book :book-width="bookWidth" :book-height="bookHeight"></book>
 		</div>
 	</div>
 </body>
