--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<div id="wrapper" style="position:relative;height:500px;width:800px">
+	<div id="wrapper" style="position:absolute;top:0;bottom:0;left:0;right:0">
 		<div id="app" style="position:absolute;top:0;bottom:0;left:0;right:0;">
 			<book :book-width="bookWidth" :book-height="bookHeight"></book>
 		</div>
