--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 			<book :book-width="bookWidth" :book-height="bookHeight"></book>
 		</div>
 	</div>
+	<div style="position:fixed;bottom:0;right:0">	
+		<button type="button" id="frozen">冻结</button>
+		<button type="button" id="unfrozen">取消冻结</button>
+	</div>
+	
 	<script src="./dist/runtime.js"></script>
 	<script src="./dist/bundle.web.js"></script>
-	
 </body>
 </html>
