--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,13 @@
 			<book :book-width="bookWidth" :book-height="bookHeight"></book>
 		</div>
 	</div>
+	<div style="position:fixed;bottom:0;right:0">	
+		<button type="button" id="frozen">冻结</button>
+		<button type="button" id="unfrozen">取消冻结</button>
+	</div>
+
 	<script src="./dist/bundle.web.js"></script>
 	<script src="./dist/runtime.js"></script>
+
 </body>
 </html>
