--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<button id="insertrow">插入行</button>
 		<button id="insertcol">插入列</button>
 		<button id ="deletecol">删除列</button>
+		<button id ="deleterow">删除行</button>
 	</div>
 	
 	<script src="./dist/runtime.js"></script>
