--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		<button id="insertcol">插入列</button>
 		<button id ="deletecol">删除列</button>
 		<button id ="deleterow">删除行</button>
+		<button id ="rowoper">操作行</button>
+		<button id ="coloper">操作列</button>
+		
 	</div>
 	
 	<script src="./dist/runtime.js"></script>
