feat(rc): 隐藏行列功能
隐藏行列功能

fixed #6

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 		<button id ="deleterow">删除行</button>
 		<button id ="rowoper">操作行</button>
 		<button id ="coloper">操作列</button>
-		
+		<button id ="colhide">隐藏列</button>
+		<button id ="colcancelhide">取消隐藏列</button>
+		<button id ="rowhide">隐藏行</button>
+		<button id ="rowcancelhide">取消隐藏行</button>
 	</div>
 	
 	<script src="./dist/runtime.js"></script>
