--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<body>
 		<div id="wrapper" style="position:absolute;top:0;bottom:0;left:0;right:0">
 			<div id="app" style="position:absolute;top:0;bottom:0;left:0;right:0;">
-				<book :book-width="bookWidth" :book-height="bookHeight"></book>
 			</div>
 		</div>
 	</div>
 	<div style="position:fixed;bottom:0;right:0">	
-		<button id="frozen">冻结</button>
+		<button id="fillcolor">背景颜色</button>
+<!-- 		<button id="frozen">冻结</button>
 		<button id="unfrozen">取消冻结</button>
 		<button id="insertrow">插入行</button>
 		<button id="insertcol">插入列</button>
@@ -23,7 +23,7 @@
 		<button id ="colhide">隐藏列</button>
 		<button id ="colcancelhide">取消隐藏列</button>
 		<button id ="rowhide">隐藏行</button>
-		<button id ="rowcancelhide">取消隐藏行</button>
+		<button id ="rowcancelhide">取消隐藏行</button> -->
 	</div>
 	
 	<script src="./dist/runtime.js"></script>
