feat(other): 完成工具栏基本结构，完成字体模块
完成工具栏基本结构，完成字体模块

fixed #22

--- a/index.html
+++ b/index.html
@@ -5,25 +5,8 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div id="wrapper" style="position:absolute;top:0;bottom:0;left:0;right:0">
-			<div id="app" style="position:absolute;top:0;bottom:0;left:0;right:0;">
-			</div>
+		<div id="app" style="width:100%; height:100%;">
 		</div>
-	</div>
-	<div style="position:fixed;bottom:0;right:0">	
-		<button id="fillcolor">背景颜色</button>
-<!-- 		<button id="frozen">冻结</button>
-		<button id="unfrozen">取消冻结</button>
-		<button id="insertrow">插入行</button>
-		<button id="insertcol">插入列</button>
-		<button id ="deletecol">删除列</button>
-		<button id ="deleterow">删除行</button>
-		<button id ="rowoper">操作行</button>
-		<button id ="coloper">操作列</button>
-		<button id ="colhide">隐藏列</button>
-		<button id ="colcancelhide">取消隐藏列</button>
-		<button id ="rowhide">隐藏行</button>
-		<button id ="rowcancelhide">取消隐藏行</button> -->
 	</div>
 	
 	<script src="./dist/runtime.js"></script>
