--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div id="app" style="width:100%; height:100%;">
-		</div>
+		<div id="app" style="width:100%; height:100%;"></div>
 	</div>
-	
 	<script src="./dist/runtime.js"></script>
 	<script src="./dist/bundle.web.js"></script>
 </body>
