--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<div id="app" style="width:100%; height:100%;">
 		</div>
 	</div>
-	
+	<button id="btn" style="position:fixed;right:0;z-index:999">undeo</button>
 	<script src="./dist/runtime.js"></script>
 	<script src="./dist/bundle.web.js"></script>
 </body>
