阶段性提交，无意义节点

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 		<div id="app" style="width:100%; height:100%;">
 		</div>
 	</div>
-	<button id="btn" style="position:fixed;right:0;z-index:999">undeo</button>
+	<div class="wrapper" style="position:fixed;right:0;z-index:999">
+		<button id="btn1" >undo</button>
+		<button id="btn2">redo</button>
+	</div>
+
 	<script src="./dist/runtime.js"></script>
 	<script src="./dist/bundle.web.js"></script>
 </body>
