--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-    <input type="hidden" id="excelId" value="123">
+    <input type="hidden" value="123" id="excelId">
 	<div id="app" style="width:100%; height:100%;"></div>
 
 	<script src="./dist/runtime.js"></script>
