--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 		</style>
 	</head>
 	<body>
-    <input type="hidden" id="auth_key" value="e7d7740b-26fc-47b4-9314-69a5aeaaaad8">
+    <input type="hidden" id="auth_key" value="5f012bc9-e209-4655-97a9-b79de978fafd">
 	<div class="app">
 		<div class="tools"></div>
 		<div class="table"></div>
 	</div>
+	<input type="button" name="click" id="dd" value="ddddddddddddd">
+	<input type="button" name="click" id="aa" value="aaaaaaaaaaaaa">
 	<script src="./dist/runtime.js"></script>
 	<script src="./dist/bundle.web.js"></script>
 </body>
