fix datasource coding

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         #a{
             height: 100%;
         }
+        .app {
+            position: static!important;
+        }
     </style>
 </head>
 <body>
