--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             top: 50px;
             left: 20px;
             right: 20px;
+            height: 130px;
             border: 1px solid #d4d4d4;
         }
         .table {
@@ -22,13 +23,10 @@
         #a{
             height: 100%;
         }
-        .app {
-            position: static!important;
-        }
     </style>
 </head>
 <body>
-<input type="hidden" id="auth_key" value="5f012bc9-e209-4655-97a9-b79de978fafd">
+<input type="hidden" id="auth_key" value="f07e2621-b7b3-4e8c-aa1c-a74fc4ecae67">
 <div class="app">
     <div class="tools"></div>
     <div class="table">
@@ -37,6 +35,7 @@
 </div>
 <input type="button" name="click" id="dd" value="ddddddddddddd">
 <input type="button" name="click" id="aa" value="aaaaaaaaaaaaa">
+<input type="button" id="clear" value="clear">
 <script src="./dist/runtime.js"></script>
 <script src="./dist/bundle.web.js"></script>
 </body>
