limit adjust row/col height and width

--- a/index.html
+++ b/index.html
@@ -20,18 +20,13 @@
             right: 20px;
             bottom: 20px;
         }
-        #a{
-            height: 100%;
-        }
     </style>
 </head>
 <body>
 <input type="hidden" id="auth_key" value="02a26b17-561e-4589-87c8-ccbcd95f8ad6">
 <div class="app">
-    <div class="sss"></div>
-    <div class="table">
-        <div id="a"></div>
-    </div>
+    <div class="tools"></div>
+    <div class="table"></div>
 </div>
 <input type="button" name="click" id="dd" value="ddddddddddddd">
 <input type="button" name="click" id="aa" value="aaaaaaaaaaaaa">
