optimizes details code

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-<input type="hidden" id="auth_key" value="02a26b17-561e-4589-87c8-ccbcd95f8ad6">
+<input type="hidden" id="auth_key" value="048f5332-70b0-4e2e-811a-13ca53d86601init">
 <div class="app">
     <div class="tools"></div>
     <div class="table">
