fix active toolbar, fix cancelhide col/row idx

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-<input type="hidden" id="auth_key" value="048f5332-70b0-4e2e-811a-13ca53d86601init">
+<input type="hidden" id="auth_key" value="012e2c3d-7907-4f37-bc0e-905203c82289">
 <div class="app">
     <div class="tools"></div>
     <div class="table"></div>
