--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </div>
 <input type="button" name="click" id="dd" value="ddddddddddddd">
 <input type="button" name="click" id="aa" value="aaaaaaaaaaaaa">
+<input type="text">
 <input type="button" id="clear" value="clear">
 <script src="./dist/runtime.js"></script>
 <script src="./dist/bundle.web.js"></script>
