--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-<input type="hidden" id="auth_key" value="01280f1b-bdb2-4825-8fdf-f44893269d65">
+<input type="hidden" id="auth_key" value="06db10c5-2c81-49d2-8cc0-97d92cc8e2fa">
 <div class="app">
     <div class="tools"></div>
     <div class="table"></div>
@@ -34,5 +34,6 @@
 <input type="button" id="clear" value="clear">
 <script src="./dist/runtime.js"></script>
 <script src="./dist/bundle.web.js"></script>
+<div></div>
 </body>
 </html>
